@@ -1051,7 +1051,7 @@ Refine Search
 Text Search
 
 #search_external_txt
-External JSON Query
+List of Activities:
 
 #search_keyword_txt
 Keyword Search
