@@ -223,7 +223,7 @@
 			<thead>
 				<tr>
 					<th class="gloss_name">Trending</th>
-					<th>Quick buttons to keyword search in Title fields only within all published IATI activities.</th>
+					<th>Quick buttons for keyword search in Title fields only, within all published IATI activities.</th>
 				</tr>
 			</thead>
 			<tr>
@@ -324,7 +324,8 @@
 			</tr>
 			<tr>
 				<td>{search_external_txt}</td>
-				<td>Get a list of IATI identifiers in JSON format and paste the URL here to view the activities in d-portal. This is especially useful if you want to view a specific set of activities.</td>
+				<td>View a specific set of activities in d-portal by typing in their identifiers here separated by comma <span class="underline"><b>or</b></span>
+					Paste the URL of IATI identifiers in JSON or CSV format here to view the activities in d-portal.</td>
 			</tr>
 		</table>
 	</div>
