@@ -1,3 +1,8 @@
+Development Portal (2020-04-14 shi)
+==============================
+Update glossary for search
+
+
 Development Portal (2020-04-12 shi)
 ==============================
 Display codes for transaction attributes
